[gd_scene load_steps=2 format=3 uid="uid://cmf71ngdqkiqu"]

[ext_resource type="Script" path="res://scripts/ui/build_card.gd" id="1_build_card"]

[node name="BuildCard" type="PanelContainer"]
custom_minimum_size = Vector2(180, 280)
script = ExtResource("1_build_card")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PlusIcon" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "+"
horizontal_alignment = 1

[node name="BuildLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "BUILD
TOWER"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CostLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "250g"
horizontal_alignment = 1

[node name="BuildButton" type="Button" parent="VBox"]
layout_mode = 2
text = "BUILD"
